<resources>
    <string name="app_name">AppPreferencias</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="silencio">Silencio</string>
    <string name="andromeda">Andromeda</string>
    <string name="basicbell">Basic Bell</string>
    <string name="cassiopeia">Cassiopeia</string>
    <string name="chime">Chime</string>
</resources>